[tool.poetry]
name = "tasty-pytrade"
version = "0.1.0"
description = ""
authors = ["baroncurtin2 <knowledge3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.54"
ruff = "^0.5.7"
pytest = "^8.3.2"
hypothesis = "^6.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
