[tool.poetry]
name = "tasty-pytrade"
version = "0.1.0"
description = ""
authors = ["baroncurtin2 <knowledge3@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = {extras = ["speedups"], version = "^3.10.3"}
fake-useragent = "^1.5.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ruff-lsp = "^0.0.54"
ruff = "^0.5.7"
pytest = "^8.3.2"
hypothesis = "^6.111.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
indent-width = 4